# VectorSage

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  embedding.env  logger.py  main.py  params.yaml  pyproject.toml  requirements.txt  setup.py  template.py
.github/workflows/: ci.yml
Pdf_download/: pdf_download.py
RAGwithSagemaker/cloud/: embeddingmodel.py  mongo_connecton.py  ragendpoints.py  textgenerationmodel.py  vectorize_docs.py
RAGwithSagemaker/config/: configuration.py
RAGwithSagemaker/constants/: __init__.py
RAGwithSagemaker/entity/: config_entity.py
RAGwithSagemaker/logging/: logging.py
Sql_files/: Populating_final_gold_table.sql  Populating_golden_tables.sql  openfda-2024-9-1-22-52.dacpac
Sql_files/Databricks/: rawtables_databricks.sql
VectorSage/cloud/: mongo_connecton.py
VectorSage/config/: configuration.py
VectorSage/entity/: config_entity.py
VectorSage/logging/: logger.py
VectorSage/utils/: common.py
config/: config.yaml
llama2-13b-orca-8k-3319/: serving.properties
research/: research.ipynb  research_2.ipynb
sdf/: app.py
static/: style.css
templates/: index.html
tests/: conftest.py  test_app.py
